--- a/jenkins.yaml
+++ b/jenkins.yaml
@@ -10,7 +10,7 @@ cloudbees-slack-integration:
       jenkins: "mandeepkaurjs"
       optedIn: true
       scmId: "mandeepkaurjs"
-      slack: "REPLACE_USER_EMAIL"
+      slack: "mandeep.kaur@nbcuni.com"
       slackWorkspace: "T010A455W77"
 cloudbees-pipeline-policies:
   config:
